# FREUID-challenge

./: .gitignore  LICENSE  README.md  dl_freuid.sh  dl_idnet.sh  dl_idnet_extra.sh  infer.py  install_torch.sh  pyproject.toml  run_overnight.sh  run_phase2.sh  run_phase3.sh  train_aux.sh
agents_docs/: 01-dataset-and-leakage.md  02-validation.md  03-competition-and-strategy.md  04-results-and-open-questions.md  README.md
artifacts/: baseline_results.json  capval_fusion_fusion_all.json  capval_fusion_nofusion_all.json  capval_scanned_fusion_nofusion_all.json  capval_scanned_fusion_nofusion_all_scanned.json  clip_probe.json  cluster_stats.json  duplicates.json  duplicates_summary.json  embeddings_meta.json  forensic_eda.json  forensic_feature_robustness.json  fusion_probe.json  fusion_result_fusion_all.json  fusion_result_fusion_loto_MAURITIUS-ID.json  fusion_result_nofusion_all.json  fusion_result_nofusion_all_heavy.json  fusion_result_nofusion_all_noaug_s0.json  fusion_result_nofusion_all_noaug_s1.json  fusion_result_nofusion_all_noaug_s1_pl.json  fusion_result_nofusion_all_noaug_s2.json  fusion_result_nofusion_all_noaug_s2_pl.json  fusion_result_nofusion_all_noaug_s3.json  fusion_result_nofusion_all_noaug_s4.json  fusion_result_nofusion_all_scanned.json  fusion_result_nofusion_loto_BENIN-DL_noaug_s4.json  fusion_result_nofusion_loto_MAURITIUS-ID_noaug_s4.json  fusion_result_nofusion_loto_MOZAMBIQUE-DL_noaug_s4.json  image_stats.parquet  image_stats_summary.json  inventory.json  label_stats.json  local_anomaly.json  npr_fingerprint.json  region_noise.json  (+2 more)
(+128 files in other folders)
