[project]
name = "freuid"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "hdbscan>=0.8.44",
    "imagehash>=4.3.2",
    "kaggle>=2.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "open-clip-torch>=3.3.0",
    "opencv-python-headless>=4.13.0.92",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "timm>=1.0.27",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
    "umap-learn>=0.5.12",
]
